--- a/gtk-3.0/Stylus/Standards/Colors/UI.styl
+++ b/gtk-3.0/Stylus/Standards/Colors/UI.styl
@@ -60,6 +60,7 @@ ScrollbarColor                      = VibrantBlue;
 ScrollbarColorDim                   = WindowColorLight;
 
 SelectionColor                      = VibrantBlue;
+SelectionColorBackground            = Silver;
 SelectionTextColor                  = TextColorSelected;
 
 ShadowColorDarker                   = alpha(Black, 0.75);
